--- a/templates/board/base.html
+++ b/templates/board/base.html
@@ -47,7 +47,7 @@
                     <li><button data-animation-scroll="true" data-target="#features"><a href="/">Features</a></button></li>
                     <li><button data-animation-scroll="true" data-target="#portfolio"><a href="/">Portfolio</a></button></li>
                     <li><button data-animation-scroll="true" data-target="#contact"><a href="/">Contact</a></button></li>
-                    <li><button><a href="#">Board</a></button></li>
+                    <li><button><a href="/board/">Board</a></button></li>
                 </ul>
             </nav>
         </div>
