--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +13,9 @@
 
 
 <body>
+    {% include 'header.html'%}
     {% block content %}
+
 
     {% endblock content %}
 </body>
