--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -130,7 +130,7 @@
                     <div class="content">
                         <h3>Python</h3>
                         <p>
-                            Django와 Django Rest Framework를 통해 백엔드를 공부하고 있습니다. 이 홈페이지도 Django로 제작되었습니다. 크롤링과 스크레이핑 과정을 통해 블로그에 새로운 기능을 파이썬을 이용해 구현할 예정입니다.
+                            test
                         </p>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                     <div class="content">
                         <h3>C</h3>
                         <p>
-                            첫 프로그래밍을 C로 시작한 것은 행운이었습니다. 덕분에 다른 언어들의 문법을 익히는 데 거부감이 없었으며 구조적 이해를 빠르게 할 수 있었습니다. 추후 자료구조와 알고리즘도 C를 바탕으로 공부할 예정입니다.
+                            test
                         </p>
                     </div>
                 </div>
