--- a/static/board/board_list.css
+++ b/static/board/board_list.css
@@ -23,7 +23,7 @@ main{
     background-color: rgb(255, 255, 255);
 }
 
-.post_list {
+/* .post_list {
     margin: 10% auto 2% auto;
     width: 90%;
     height: 60%;
@@ -38,14 +38,21 @@ main{
     font-weight: bold;
     background-color: rgb(22, 22, 22);
 }
-.post_list ul a{
+.list_under .list_contents{
     padding: 10px 35px;
     display: flex;
     justify-content: space-between;
 }
+
+
 .list_contents:nth-child(2n){
     background-color: rgb(221, 221, 221);
-}
+} */
+
+
+
+
+
 
 .pages {
     display: flex;
@@ -54,7 +61,7 @@ main{
 }
 .pages a{
     margin-right: 5px;
-    
+    /* padding: 1px 3px; */
 }
 .pages a:hover{ /* */
     border: 1px solid rgb(231, 231, 231);    
@@ -99,3 +106,76 @@ main{
     border:0;
     margin-left:2px;
 } 
+
+.write {
+    display: flex;
+    justify-content: center;
+    margin-left: 65%;
+    align-items: center;
+    font-size: 0.9rem;
+}
+
+
+
+
+.posts {
+    margin: 10% auto 2% auto;
+    width: 90%;
+    height: 60%;
+    background-color: white;
+    border-radius: 5px;
+    -webkit-box-shadow: 2px 4px 16px 1px rgba(0,0,0,0.47);
+    -moz-box-shadow: 2px 4px 16px 1px rgba(0,0,0,0.47);
+    box-shadow: 2px 4px 16px 1px rgba(211,211,211, 47%);
+}
+
+.post_list{
+    width:96%;
+    height:100%;
+    margin-left: 2%;
+    padding-top: 2%;
+}
+
+.post_user{
+    display: flex;
+    align-items: center;
+}
+
+.post_user p{
+    margin-left:0.5%;
+}
+.time {
+    font-size: 0.85rem;
+    color:rgb(197, 197, 197);
+}
+
+.post_title {
+    margin-top:1.5%;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(27, 126, 255);
+}
+
+.post_inhalt {
+    padding-top: 1%;
+    font-size:0.9rem;
+    width:98%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 2rem;
+}
+
+.underline{
+    border-top: 1px solid rgb(221, 221, 221);
+    margin-top: 2%;
+}
+
+.post_image {
+    width: 9%;
+    float:right;
+    margin-right: 1%;
+    margin-top: -1.4%;
+}
+.post_detail {
+    margin-bottom:1%;
+}
